tests/snapshots/run_wpt_conformance__coreml_reshape__squeeze__float32_3D_tensor_by_eliminating_one_dimension.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape (squeeze) float32 3D tensor by eliminating one dimension",
    "coreml",
    "PASS",
)
